[package]
name = "lnk"
description  = "A full rust implementation to parse windows LNK files"
version = "0.2.0"
edition = "2021"

# [lib]
# name = "lnk_parser"
# path = "src/lib.rs"

# [[bin]]
# name = "lnk_parser"
# path = "src/bin/lnk_parser.rs"

[dependencies]
chrono = "0.4.15"
byteorder = "1.3"
serde_json = "1.0"
serde = {version = "1.0.123", features = ["derive"]}
clap = "2.33.0"
glob = "0.3.0"
winparsingtools = "1.1.0"
